@@ -58,6 +58,8 @@ Restlet changes log
  - ComponentBuilder.setParameter() method was changed to addParameter() allowing repeating parameters.
  - Components and Connectors now have a getParameters() method that exposes a modifiable list of parameters (ParameterList instance).
  - Moved ContextResource to "impl" package
+ - Added "readOnly" property to DirectoryRestlet to enable modifications from the client. By default, "readOnly" is set to true.
+ - 
  
 1.0 beta 14 (2006-06-02)
  - Adjusted build.properties so that default values work directly.
